# wml2-on-rust

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  metadata.md
.codex/: AGENTS.md
.github/workflow/: release.yml
.github/workflows/: release.yml  viewer.yml
doc/: search-index.js  settings.html  source-files.js
doc/implementors/core/cmp/: trait.PartialEq.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/lib/: all.html  enum.DrawNextOptions.html  index.html  macro.debug_print.html  macro.debug_println.html  sidebar-items.js  struct.DecodeOptions.html  struct.ImageBuffer.html  trait.DrawCallback.html
doc/lib/error/: enum.ErrorKind.html  enum.ImgError.html  index.html  sidebar-items.js
doc/lib/iccprofile/: enum.Data.html  fn.icc_profile_header_print.html  fn.icc_profile_print.html  index.html  sidebar-items.js  struct.ICCProfile.html  struct.S15FixedNumber.html  struct.U16FixNumber.html  struct.U1Fixed15Number.html  struct.U8Fixed8Number.html
doc/lib/io/: fn.read_byte.html  fn.read_bytes.html  fn.read_f32.html  fn.read_f64.html  fn.read_i16.html  fn.read_i16be.html  fn.read_i16le.html  fn.read_i32.html  fn.read_i32be.html  fn.read_i32le.html  fn.read_i64.html  fn.read_i64be.html  fn.read_i64le.html  fn.read_i8.html  fn.read_string.html  fn.read_u128be.html  fn.read_u16.html  fn.read_u16be.html  fn.read_u16le.html  fn.read_u32.html  fn.read_u32be.html  fn.read_u32le.html  fn.read_u64.html  fn.read_u64be.html  fn.read_u64le.html  index.html  sidebar-items.js
doc/lib/jpeg/: index.html  sidebar-items.js
doc/lib/jpeg/decoder/: fn.decode.html  fn.huffman_extend.html  index.html  struct.HuffmanDecodeTable.html
doc/lib/jpeg/header/: enum.ICCProfileData.html  enum.JpegAppHeaders.html  index.html  sidebar-items.js  struct.AdobeApp14.html  (+12 more)
doc/lib/tiff/: index.html  sidebar-items.js
doc/lib/util/: index.html
doc/src/lib/: error.rs.html  iccprofile.rs.html  lib.rs.html  util.rs.html
samples/: README.md  WML2Viewer.HEIC  WML2Viewer.avif  WML2Viewer.jp2
src/: color.rs  draw.rs  error.rs  iccprofile.rs  lib.rs  mod.rs  test.rs  util.rs  warning.rs  worning.rs
src/bmp/: decoder.rs  header.rs  mod.rs  warning.rs  worning.rs
src/decoder/: lzw.rs  mod.rs
src/gif/: decoder.rs  header.rs  mod.rs
src/io/: mod.rs  reader.rs
src/jpeg/: decoder.rs  header.rs  mod.rs  progressive.rs  util.rs  warning.rs  worning.rs
src/png/: decoder.rs  header.rs
src/tiff/: header.rs  mod.rs  tags.rs  util.rs
test/images/: README.md
test/images/bundled/: README.md  listedfile.wmltxt
wml2/: Cargo.toml  todo.md
wml2-test/: Cargo.toml
wml2-test/examples/: converter.rs  metadata.rs  to_bmp.rs  to_jpeg.rs  to_png.rs
wml2-test/src/: main.rs
wml2/src/: color.rs  draw.rs  error.rs  iccprofile.rs  lib.rs  metadata.rs  retro.rs  util.rs  warning.rs
wml2/src/bmp/: decoder.rs  encoder.rs  header.rs  mod.rs  warning.rs
wml2/src/decoder/: lzw.rs  mod.rs
wml2/src/decoder/ccitt/: black.rs  mod.rs  white.rs
wml2/src/encoder/: lzw.rs  mod.rs
wml2/src/gif/: decoder.rs  encoder.rs  header.rs  mod.rs  util.rs
wml2/src/iccprofile/: mod.rs  utils.rs
wml2/src/ico/: decoder.rs  header.rs  mod.rs
wml2/src/jpeg/: decoder.rs  header.rs  mod.rs  progressive.rs  util.rs  warning.rs
wml2/src/jpeg/encoder/: bitwriter.rs  encoder.rs  fdct.rs  huffman.rs  mod.rs  quantize_table.rs
wml2/src/mag/: decoder.rs  header.rs  mod.rs
wml2/src/maki/: decoder.rs  mod.rs
wml2/src/metadata/: c2pa.rs  exif.rs
wml2/src/pcd/: decoder.rs  mod.rs
wml2/src/pi/: decoder.rs  mod.rs
wml2/src/pic/: decoder.rs  mod.rs
wml2/src/png/: decoder.rs  encoder.rs  header.rs  mod.rs  utils.rs  warning.rs
wml2/src/tiff/: encoder.rs  endocder.rs  header.rs  mod.rs  tags.rs  util.rs  warning.rs
wml2/src/tiff/decoder/: ccitt.rs  jpeg.rs  mod.rs  packbits.rs
wml2/src/tiff/decoder/ccitt/: black.rs  mod.rs  white.rs
wml2/src/vsp/: decoder.rs  mod.rs
wml2/src/webp/: mod.rs  utils.rs  warning.rs
wml2/src/webp/decoder/: alpha.rs  animation.rs  header.rs  lossless.rs  lossy.rs  mod.rs  quant.rs  tree.rs  vp8.rs  vp8i.rs
wml2/src/webp/encoder/: bit_writer.rs  container.rs  error.rs  huffman.rs  mod.rs  vp8_bool_writer.rs  writer.rs
wml2/src/webp/encoder/lossless/: api.rs  entropy.rs  mod.rs  plans.rs  tokens.rs
wml2/src/webp/encoder/lossy/: api.rs  bitstream.rs  mod.rs  predict.rs
wml2/tests/: bmp_bounds.rs  c2pa_exif_samples.rs  c2pa_metadata.rs  convert.rs  error_recovery.rs  error_samples.rs  gif_encode.rs  image_to.rs  jpeg_encode.rs  png_encode.rs  retro_bounds.rs  retro_formats.rs  test_samples.example.txt  tiff_encode.rs  webp_decode.rs  webp_encode.rs
wml2/tests/common/: mod.rs
wml2viewer/: Cargo.toml  README.ja.md  README.md  SPEC.md  todo.md  zipreader.md
wml2viewer/docs/: SPEC.md  repo-split.md  todo.md
wml2viewer/examples/: bench_archive.rs
wml2viewer/resources/i18n/: en.json  ja.json
wml2viewer/resources/icons/: svg.md
wml2viewer/src/: app.rs  bench.rs  lib.rs  main.rs  options.rs
wml2viewer/src/configs/: config.rs
wml2viewer/src/configs/resourses/: mod.rs  text.rs
wml2viewer/src/dependent/: mod.rs
wml2viewer/src/dependent/android/: mod.rs
wml2viewer/src/dependent/darwin/: mod.rs
wml2viewer/src/dependent/linux/: mod.rs
wml2viewer/src/dependent/other/: mod.rs
wml2viewer/src/dependent/plugins/: ffmpeg.rs  mod.rs  susie64.rs  system.rs
wml2viewer/src/dependent/windows/: mod.rs
wml2viewer/src/drawers/: affine.rs  image.rs  mod.rs
wml2viewer/src/filer/: mod.rs
wml2viewer/src/filesystem/: browser.rs  cache.rs  listed_file.rs  mod.rs  navigator.rs  path.rs  protocol.rs  sort.rs  source.rs  worker.rs  zip_file.rs
wml2viewer/src/ui/: mod.rs
wml2viewer/src/ui/i18n/: mod.rs
wml2viewer/src/ui/input/: dispatch.rs  mod.rs
wml2viewer/src/ui/menu/config/: mod.rs
wml2viewer/src/ui/menu/fileviewer/: icons.rs  mod.rs  state.rs  thumbnail.rs  worker.rs
wml2viewer/src/ui/render/: mod.rs  worker.rs
wml2viewer/src/ui/viewer/: mod.rs  options.rs  state.rs
(+31 files in other folders)
