[package]
name = "wml2"
version = "0.0.6"
authors = ["mith-mmk <47620686+mith-mmk@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["rlib"] 

[dependencies]
bin-rs = {version = "0.0.1",features = ["stream"]}


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
