[package]
name = "wml2-test"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "Image decoder/encoder test and samples."
authors = ["MITH@mmk"]
readme = "README.md"

[features]
default = []

[dependencies]
dotenv = "0.15"

[dependencies.wml2]
path = "../wml2"
features = ["multithread"]

[dependencies.icc-profile]
git = "https://github.com/mith-mmk/icc_profile"

[profile.release]
opt-level = 3
