[package]
name = "wml2"
version = "0.0.18"
repository = "https://github.com/mith-mmk/wml2-on-rust"
homepage = "https://mith-mmk.github.io/"
authors = ["mith-mmk <47620686+mith-mmk@users.noreply.github.com>"]
description = "Pure Rust multi-format image decoding and encoding library supporting JPEG, PNG, GIF, WebP, TIFF, and PC-98 legacy formats (MAG, MAKI, PI, PIC)
edition = "2024"
rust-version = "1.91"
license = "MIT"
keywords = ["image","codec","jpeg","codec","png"]
categories = ["multimedia::images","encoding"]

[lib]
crate-type = ["rlib"] 

[features]
#bmp = []
#gif = []
#jpeg = []
#use LL&M for IDCT
idct_llm = []   
#use Slower for IDCT
idct_slower = [] 
#use slower reference FDCT
fdct_slower = []
#default use AAN for IDCT
#png = []
#tiff = []
#all = []
# use multithread
multithread = []
SJIS = []
noretoro = []

[dependencies]
bin-rs = {version = "0.0.10",features = ["util"]}
#bin-rs = { git = "https://github.com/mith-mmk/bin-rs", features = ["util"], ref="3fb43f7" }

miniz_oxide = {version = "0.5.1"}
