[package]
name = "wml2viewer"
version = "0.0.1 lib(0.0.18)"
edition = "2024"

license = "MIT"
description = "Minimal native image viewer built with egui and wml2"
authors = ["MITH@mmk"]
publish = false

[dependencies]
eframe = "0.33"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
wml2 = { path = "../wml2", features = ["multithread", "idct_llm"] }
